@@ -81,6 +81,8 @@ o tls.c ported for openssl 3.0.0
 certificate filename
 38. tls.c: set socket in ndelay mode
 39. instcheck.in: common instcheck for daemontools, ucspi-tcp, indimail-mta
+40. tcpclient.c: use unencrypted connection if argument to -n is an empty
+    string
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 21/05/2020
